# optuna-batch

./: Dockerfile.job  Dockerfile.optimizer  Makefile  README.md  config.yaml  pyproject.toml
optunabatch/: custom.py  job.py  optimizer.py
